Colaboratory를 통해 생성됨

--- a/13-rnn-lotto.ipynb
+++ b/13-rnn-lotto.ipynb
@@ -13,7 +13,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -72,9 +73,9 @@
         "id": "5CoSg25DgmU1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 195
         },
-        "outputId": "2cadf5ee-21fa-4950-8423-ec72dc31e4b2"
+        "outputId": "d64a3eea-58db-4bf3-9a81-cbeb8932408a"
       },
       "source": [
         "df.head()"
@@ -218,11 +219,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "TURmD9u6xmOu",
-        "outputId": "c471ef00-71b1-4cb6-e49b-58deac0855a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
-        }
+          "height": 195
+        },
+        "outputId": "9a4080e5-3505-4d84-ac93-32c077e20bc2"
       },
       "source": [
         "df.head()"
@@ -353,43 +354,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Xo4yI45x1N5"
-      },
-      "source": [
-        "x = np.zeros(shape=(1,45), dtype=float)"
-      ],
-      "id": "4Xo4yI45x1N5",
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eEVpDxwS8cDQ",
-        "outputId": "b65971eb-467d-4ee7-a806-737a5385832f",
+        "id": "w5GX3SFZ2g0C",
+        "outputId": "5a6e4a5c-0299-448e-ee99-088af881ca35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "x"
+        "df.shape"
       ],
-      "id": "eEVpDxwS8cDQ",
-      "execution_count": 7,
+      "id": "w5GX3SFZ2g0C",
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+              "(964, 10)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -399,39 +386,69 @@
         "id": "LjNU4sK9yTRl"
       },
       "source": [
-        "X = np.array(np.zeros(shape=(1,45), dtype=float))\n",
-        "for i in range(df.shape[0]):\n",
-        "  for j in range(6):\n",
-        "    col = df.iloc[i][str(j+1)]\n",
-        "    x[0][col-1] += 1.0\n",
-        "    # if i < 5:\n",
-        "    #   print('x:', x)\n",
-        "  X = np.append(X, x, axis=0)"
+        "ncount = np.zeros((1,45), dtype=float)"
       ],
       "id": "LjNU4sK9yTRl",
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5bEz5D451_Z_",
-        "outputId": "1e49cd03-51af-456f-9b11-178edf30ae8f",
+        "id": "bmeMpJlk4H0M",
+        "outputId": "b198bc32-13b8-4415-c353-2f9db89845ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "X.shape"
+        "for i in range(df.shape[0]):\n",
+        "  for j in range(6):\n",
+        "    col = df.iloc[i][str(j+1)]\n",
+        "    ncount[0][col-1] += 1.0\n",
+        "\n",
+        "  if i == 0:\n",
+        "    X = ncount\n",
+        "  else:\n",
+        "    X = np.append(X, ncount, axis=0)\n",
+        "\n",
+        "print('x.shape:', X.shape)\n",
+        "# X[964]"
       ],
-      "id": "5bEz5D451_Z_",
+      "id": "bmeMpJlk4H0M",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x.shape: (964, 45)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jbeEjug_2si4",
+        "outputId": "6e002504-2e74-4c79-d914-42f9e012ad09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X[0]"
+      ],
+      "id": "jbeEjug_2si4",
       "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(965, 45)"
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 0., 1., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 1., 0., 0., 1., 1., 0.,\n",
+              "       0., 0., 1., 0., 0., 1., 0., 1., 0., 0., 0.])"
             ]
           },
           "metadata": {
@@ -444,75 +461,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8bIC0dVO38DR",
-        "outputId": "ac7eafb2-7bbe-44de-fa75-59d2828a616e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "X[500]"
-      ],
-      "id": "8bIC0dVO38DR",
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([76., 65., 70., 72., 68., 57., 61., 68., 54., 69., 66., 60., 69.,\n",
-              "       72., 65., 62., 73., 70., 70., 83., 62., 60., 60., 67., 69., 69.,\n",
-              "       75., 56., 64., 63., 67., 57., 62., 78., 63., 70., 81., 57., 67.,\n",
-              "       83., 55., 64., 66., 63., 72.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "DdYK7wF7EHKe"
       },
       "source": [
         "df_y = df[['1','2','3','4','5','6']]"
       ],
       "id": "DdYK7wF7EHKe",
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1m0s6BD_GDgi",
-        "outputId": "4670e8b3-6c7c-4e95-b5d0-0c9b89b42217",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "df_y.shape"
-      ],
-      "id": "1m0s6BD_GDgi",
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(964, 6)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -523,77 +479,402 @@
         "Y = df_y.values"
       ],
       "id": "t5iQbI_vGFHK",
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yRyyE46gGHN2",
-        "outputId": "4444a2ab-34a4-41f3-bb1c-46a0c387f8b3",
+        "id": "3KIqnZRkCAFK",
+        "outputId": "69cb00ca-d702-4c43-f5b2-3a729e018f69",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Y.shape"
+        "print('x.shape:', X.shape)\n",
+        "print('y.shape:', Y.shape)"
       ],
-      "id": "yRyyE46gGHN2",
-      "execution_count": 14,
+      "id": "3KIqnZRkCAFK",
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(964, 6)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
+          "output_type": "stream",
+          "text": [
+            "x.shape: (964, 45)\n",
+            "y.shape: (964, 6)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZuAaV42pGbiK",
-        "outputId": "756775c8-8a8a-4264-e28b-ad0c0a3d7735",
+        "id": "7pU7nsKBAxHQ",
+        "outputId": "21db2399-9b95-47b3-c5ab-a574af316810",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "Y[0]"
+        "y_onehot = []\n",
+        "tmponehot = np.zeros(45).tolist()\n",
+        "tmponehot[3] = 1.0\n",
+        "y_onehot.append(tmponehot)\n",
+        "y_onehot.append(tmponehot)\n",
+        "\n",
+        "np.array(y_onehot).shape\n"
       ],
-      "id": "ZuAaV42pGbiK",
+      "id": "7pU7nsKBAxHQ",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 45)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iSNo8nrGCu9R"
+      },
+      "source": [
+        "def make_onehot(value):\n",
+        "  onehot = np.zeros(45).tolist()\n",
+        "  onehot[value-1] = 1.0\n",
+        "  return onehot"
+      ],
+      "id": "iSNo8nrGCu9R",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qe_1_9bdBny3",
+        "outputId": "4f3d4345-7744-4660-a158-bdbf432e108d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_onehot = []\n",
+        "for i in range(Y.shape[0]):\n",
+        "  for j in range(6):\n",
+        "    y_onehot.append(make_onehot(Y[i][j]))\n",
+        "\n",
+        "y_onehot = np.array(y_onehot)\n",
+        "y_onehot = np.reshape(y_onehot, (964,6,45))\n",
+        "print('y_onehot.shape:', y_onehot.shape)\n"
+      ],
+      "id": "Qe_1_9bdBny3",
       "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([10, 23, 29, 33, 37, 40])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
+          "output_type": "stream",
+          "text": [
+            "y_onehot.shape: (964, 6, 45)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xsXFsjoQGdGo"
+        "id": "9-9kF2w1AxN-",
+        "outputId": "86c7b182-7777-48a8-fa7a-baf666b73ffa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        " "
+        "X.shape"
+      ],
+      "id": "9-9kF2w1AxN-",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(964, 45)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cPoKR8QnLEzm"
+      },
+      "source": [
+        "# build datasets\n",
+        "def build_dataset(x_time_series, y_time_series, seq_length):\n",
+        "    dataX = []\n",
+        "    dataY = []\n",
+        "    for i in range(0, len(y_time_series) - seq_length):\n",
+        "        x = x_time_series[i:i + seq_length, :]\n",
+        "        y = y_time_series[i + seq_length - 1, :]\n",
+        "        dataX.append(x)\n",
+        "        dataY.append(y)\n",
+        "    return np.array(dataX), np.array(dataY)"
+      ],
+      "id": "cPoKR8QnLEzm",
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ocVECshALG2x"
+      },
+      "source": [
+        "x_data, y_data = build_dataset(X, y_onehot, 6)"
+      ],
+      "id": "ocVECshALG2x",
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hw9HFjVoMVfX",
+        "outputId": "f0b40647-ce12-4a79-a628-93ce06fa5bf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('x_data.shape:', x_data.shape)\n",
+        "print('y_data.shape:', y_data.shape)"
+      ],
+      "id": "hw9HFjVoMVfX",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x_data.shape: (958, 6, 45)\n",
+            "y_data.shape: (958, 6, 45)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GIT7nmafMhJ1",
+        "outputId": "888a6c2b-5129-4b41-b9be-7298b5c32397",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x_data[0]\n",
+        "y_data[0]"
+      ],
+      "id": "GIT7nmafMhJ1",
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xsXFsjoQGdGo",
+        "outputId": "b8f482ee-2541-4fb8-8d35-db2a155fc861",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = keras.Sequential();\n",
+        "model.add(keras.layers.LSTM(units=45, input_shape=(6, 45), return_sequences=True))\n",
+        "model.add(keras.layers.LSTM(units=45, return_sequences=True))\n",
+        "model.add(keras.layers.Dense(units=45, activation='softmax'))\n",
+        "model.compile(loss='categorical_crossentropy', optimizer=keras.optimizers.Adam(learning_rate=0.01), metrics=['accuracy'])\n",
+        "model.summary()"
       ],
       "id": "xsXFsjoQGdGo",
-      "execution_count": 15,
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "lstm (LSTM)                  (None, 6, 45)             16380     \n",
+            "_________________________________________________________________\n",
+            "lstm_1 (LSTM)                (None, 6, 45)             16380     \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 6, 45)             2070      \n",
+            "=================================================================\n",
+            "Total params: 34,830\n",
+            "Trainable params: 34,830\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Aqb0JiVBeg1",
+        "outputId": "a188dab4-83dc-43f6-ad5d-8d533ae173dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.fit(x_data, y_data, epochs=1000, verbose=0)"
+      ],
+      "id": "3Aqb0JiVBeg1",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fdac318a650>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "isuRLno3OZuS",
+        "outputId": "8c357951-e7b2-4b76-9b0c-381bf0c88914",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x_test = x_data[-1,:]\n",
+        "x_test = np.delete(x_test, 0, axis=0)\n",
+        "x_test = np.append(x_test, X[-1:], axis=0)\n",
+        "x_test = x_test.reshape((1,6,45))\n",
+        "print('x_test.shape:', x_test.shape)"
+      ],
+      "id": "isuRLno3OZuS",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x_test.shape: (1, 6, 45)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jYyAfCQ8ask7"
+      },
+      "source": [
+        "pred_y = model.predict(x_test)"
+      ],
+      "id": "jYyAfCQ8ask7",
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fSohpQledb8b",
+        "outputId": "afeb3cba-7b40-4cb3-d5b6-9b815bcf6b35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in range(6):\n",
+        "  print(np.argmax(pred_y[0][i]) + 1)"
+      ],
+      "id": "fSohpQledb8b",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "8\n",
+            "20\n",
+            "31\n",
+            "34\n",
+            "45\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eH5BscIOfS3n"
+      },
+      "source": [
+        ""
+      ],
+      "id": "eH5BscIOfS3n",
+      "execution_count": 25,
       "outputs": []
     }
   ]
