Colaboratory를 통해 생성됨

--- a/13-rnn-lotto.ipynb
+++ b/13-rnn-lotto.ipynb
@@ -70,138 +70,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5CoSg25DgmU1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        },
-        "outputId": "d64a3eea-58db-4bf3-9a81-cbeb8932408a"
+        "id": "5CoSg25DgmU1"
       },
       "source": [
         "df.head()"
       ],
       "id": "5CoSg25DgmU1",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>seq</th>\n",
-              "      <th>date</th>\n",
-              "      <th>num</th>\n",
-              "      <th>won</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "      <th>5</th>\n",
-              "      <th>6</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>964</td>\n",
-              "      <td>2021.5.22</td>\n",
-              "      <td>10</td>\n",
-              "      <td>2,345,861,063</td>\n",
-              "      <td>6</td>\n",
-              "      <td>21</td>\n",
-              "      <td>36</td>\n",
-              "      <td>38</td>\n",
-              "      <td>39</td>\n",
-              "      <td>43</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>963</td>\n",
-              "      <td>2021.5.15</td>\n",
-              "      <td>15</td>\n",
-              "      <td>1,476,478,125</td>\n",
-              "      <td>6</td>\n",
-              "      <td>12</td>\n",
-              "      <td>19</td>\n",
-              "      <td>23</td>\n",
-              "      <td>34</td>\n",
-              "      <td>42</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>962</td>\n",
-              "      <td>2021.5.8</td>\n",
-              "      <td>12</td>\n",
-              "      <td>1,940,906,094</td>\n",
-              "      <td>1</td>\n",
-              "      <td>18</td>\n",
-              "      <td>28</td>\n",
-              "      <td>31</td>\n",
-              "      <td>34</td>\n",
-              "      <td>43</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>961</td>\n",
-              "      <td>2021.5.1</td>\n",
-              "      <td>9</td>\n",
-              "      <td>2,575,231,209</td>\n",
-              "      <td>11</td>\n",
-              "      <td>20</td>\n",
-              "      <td>29</td>\n",
-              "      <td>31</td>\n",
-              "      <td>33</td>\n",
-              "      <td>42</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>960</td>\n",
-              "      <td>2021.4.24</td>\n",
-              "      <td>10</td>\n",
-              "      <td>2,401,133,213</td>\n",
-              "      <td>2</td>\n",
-              "      <td>18</td>\n",
-              "      <td>24</td>\n",
-              "      <td>30</td>\n",
-              "      <td>32</td>\n",
-              "      <td>45</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   seq       date  num            won   1   2   3   4   5   6\n",
-              "0  964  2021.5.22   10  2,345,861,063   6  21  36  38  39  43\n",
-              "1  963  2021.5.15   15  1,476,478,125   6  12  19  23  34  42\n",
-              "2  962   2021.5.8   12  1,940,906,094   1  18  28  31  34  43\n",
-              "3  961   2021.5.1    9  2,575,231,209  11  20  29  31  33  42\n",
-              "4  960  2021.4.24   10  2,401,133,213   2  18  24  30  32  45"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -218,147 +94,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TURmD9u6xmOu",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        },
-        "outputId": "9a4080e5-3505-4d84-ac93-32c077e20bc2"
+        "id": "TURmD9u6xmOu"
       },
       "source": [
         "df.head()"
       ],
       "id": "TURmD9u6xmOu",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>seq</th>\n",
-              "      <th>date</th>\n",
-              "      <th>num</th>\n",
-              "      <th>won</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "      <th>5</th>\n",
-              "      <th>6</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>963</th>\n",
-              "      <td>1</td>\n",
-              "      <td>2002.12.7</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>10</td>\n",
-              "      <td>23</td>\n",
-              "      <td>29</td>\n",
-              "      <td>33</td>\n",
-              "      <td>37</td>\n",
-              "      <td>40</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>962</th>\n",
-              "      <td>2</td>\n",
-              "      <td>2002.12.14</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2,002,006,800</td>\n",
-              "      <td>9</td>\n",
-              "      <td>13</td>\n",
-              "      <td>21</td>\n",
-              "      <td>25</td>\n",
-              "      <td>32</td>\n",
-              "      <td>42</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>961</th>\n",
-              "      <td>3</td>\n",
-              "      <td>2002.12.21</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2,000,000,000</td>\n",
-              "      <td>11</td>\n",
-              "      <td>16</td>\n",
-              "      <td>19</td>\n",
-              "      <td>21</td>\n",
-              "      <td>27</td>\n",
-              "      <td>31</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>960</th>\n",
-              "      <td>4</td>\n",
-              "      <td>2002.12.28</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>14</td>\n",
-              "      <td>27</td>\n",
-              "      <td>30</td>\n",
-              "      <td>31</td>\n",
-              "      <td>40</td>\n",
-              "      <td>42</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>959</th>\n",
-              "      <td>5</td>\n",
-              "      <td>2003.1.4</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>16</td>\n",
-              "      <td>24</td>\n",
-              "      <td>29</td>\n",
-              "      <td>40</td>\n",
-              "      <td>41</td>\n",
-              "      <td>42</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "     seq        date  num            won   1   2   3   4   5   6\n",
-              "963    1   2002.12.7    0              0  10  23  29  33  37  40\n",
-              "962    2  2002.12.14    1  2,002,006,800   9  13  21  25  32  42\n",
-              "961    3  2002.12.21    1  2,000,000,000  11  16  19  21  27  31\n",
-              "960    4  2002.12.28    0              0  14  27  30  31  40  42\n",
-              "959    5    2003.1.4    0              0  16  24  29  40  41  42"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "w5GX3SFZ2g0C",
-        "outputId": "5a6e4a5c-0299-448e-ee99-088af881ca35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "773c127e-f5aa-4dd7-856e-0391f0ecb95f"
       },
       "source": [
         "df.shape"
@@ -396,10 +148,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bmeMpJlk4H0M",
-        "outputId": "b198bc32-13b8-4415-c353-2f9db89845ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f0986f24-138b-4bc3-afe8-362985db5a83"
       },
       "source": [
         "for i in range(df.shape[0]):\n",
@@ -430,33 +182,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jbeEjug_2si4",
-        "outputId": "6e002504-2e74-4c79-d914-42f9e012ad09",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "jbeEjug_2si4"
       },
       "source": [
         "X[0]"
       ],
       "id": "jbeEjug_2si4",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 0., 1., 0., 0., 0., 0.,\n",
-              "       0., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 1., 0., 0., 1., 1., 0.,\n",
-              "       0., 0., 1., 0., 0., 1., 0., 1., 0., 0., 0.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -486,10 +219,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3KIqnZRkCAFK",
-        "outputId": "69cb00ca-d702-4c43-f5b2-3a729e018f69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b55c46f-2810-4030-ff33-d99c65d0f346"
       },
       "source": [
         "print('x.shape:', X.shape)\n",
@@ -512,10 +245,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7pU7nsKBAxHQ",
-        "outputId": "21db2399-9b95-47b3-c5ab-a574af316810",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "396e8bdd-d01d-4331-d759-a45e70d1e5e9"
       },
       "source": [
         "y_onehot = []\n",
@@ -562,10 +295,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Qe_1_9bdBny3",
-        "outputId": "4f3d4345-7744-4660-a158-bdbf432e108d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5780cee-92a4-478c-d4cd-a52d7b64b1a9"
       },
       "source": [
         "y_onehot = []\n",
@@ -593,10 +326,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9-9kF2w1AxN-",
-        "outputId": "86c7b182-7777-48a8-fa7a-baf666b73ffa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1d0f6ff1-dbd2-42fa-cfa1-366adb25dbf1"
       },
       "source": [
         "X.shape"
@@ -655,10 +388,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hw9HFjVoMVfX",
-        "outputId": "f0b40647-ce12-4a79-a628-93ce06fa5bf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ab11345c-6496-45bd-ffd2-d971d6ff6968"
       },
       "source": [
         "print('x_data.shape:', x_data.shape)\n",
@@ -680,58 +413,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GIT7nmafMhJ1",
-        "outputId": "888a6c2b-5129-4b41-b9be-7298b5c32397",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GIT7nmafMhJ1"
       },
       "source": [
         "x_data[0]\n",
         "y_data[0]"
       ],
       "id": "GIT7nmafMhJ1",
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xsXFsjoQGdGo",
-        "outputId": "b8f482ee-2541-4fb8-8d35-db2a155fc861",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0ebca3ef-df6b-4b77-f711-7d331b28d1de"
       },
       "source": [
         "model = keras.Sequential();\n",
@@ -770,10 +469,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3Aqb0JiVBeg1",
-        "outputId": "a188dab4-83dc-43f6-ad5d-8d533ae173dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f87cbc1-a717-46be-d123-3be98dd023e0"
       },
       "source": [
         "model.fit(x_data, y_data, epochs=1000, verbose=0)"
@@ -785,7 +484,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fdac318a650>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fd86cf3d810>"
             ]
           },
           "metadata": {
@@ -799,10 +498,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "isuRLno3OZuS",
-        "outputId": "8c357951-e7b2-4b76-9b0c-381bf0c88914",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "01869c57-b038-4591-9e9a-62c0fa08d88e"
       },
       "source": [
         "x_test = x_data[-1,:]\n",
@@ -838,43 +537,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fSohpQledb8b",
-        "outputId": "afeb3cba-7b40-4cb3-d5b6-9b815bcf6b35",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "fSohpQledb8b"
       },
       "source": [
         "for i in range(6):\n",
         "  print(np.argmax(pred_y[0][i]) + 1)"
       ],
       "id": "fSohpQledb8b",
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n",
-            "8\n",
-            "20\n",
-            "31\n",
-            "34\n",
-            "45\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eH5BscIOfS3n"
-      },
-      "source": [
-        ""
-      ],
-      "id": "eH5BscIOfS3n",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     }
   ]
