Colaboratory를 통해 생성됨

--- a/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
+++ b/stock-etc/01-crawling-naver-sise-market-sum-500.ipynb
@@ -86,10 +86,10 @@
         "def parse(pageString):\n",
         "  bsObj = BeautifulSoup(pageString, \"html.parser\")\n",
         "  print(bsObj)\n",
-        "  pass\n"
+        "  return []\n"
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "  return list\n"
       ],
       "id": "1E1fnedWM45L",
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -114,7 +114,15 @@
         "id": "ig12wUayNou6"
       },
       "source": [
-        "list = getSiseMarketSum(1, 2)"
+        "result = []\n",
+        "\n",
+        "for i in range(1, 11): # 500 = 50 * 10\n",
+        "  list = getSiseMarketSum(0, i)\n",
+        "  if (list is not None) :\n",
+        "    print('i:', i)\n",
+        "    result += list\n",
+        "\n",
+        "print(result)"
       ],
       "id": "ig12wUayNou6",
       "execution_count": null,
@@ -123,13 +131,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2FVoibsmNxxl"
+        "id": "GSDgHE-iRl5a"
       },
       "source": [
         ""
       ],
-      "id": "2FVoibsmNxxl",
-      "execution_count": 6,
+      "id": "GSDgHE-iRl5a",
+      "execution_count": 7,
       "outputs": []
     }
   ]
